--- a/1 - Starter files/index.html
+++ b/1 - Starter files/index.html
@@ -1,13 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta id="view" name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1" />
-		<title>Timeline</title>
-	</head>
-	<body>
-
-		<!-- timeline goes here -->
-		
-	</body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      id="view"
+      name="viewport"
+      content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1"
+    />
+    <title>Timeline</title>
+  </head>
+  <body>
+    <!-- timeline goes here -->
+  </body>
 </html>
