added in jQuery and finished css for larger screen sizes

--- a/1 - Starter files/index.html
+++ b/1 - Starter files/index.html
@@ -43,7 +43,7 @@
                 quaerat vero obcaecati ipsam incidunt quo dolorum totam odio,
                 iste ea ipsum eligendi rerum similique!
               </p>
-              <div class="label">1969</div>
+              <div class="label">1960-69</div>
               <div class="clear-both"></div>
             </div>
           </div>
